Description
Keys seem to randomly go missing from HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows NT\CurrentVersion\ProfileList, which causes userenv to freak out and not assign user profile environment variables.
However this does not seem to happen only at logon. Some programs (e.g. Chrome setup) trigger this behavior reliably even without a reboot.
E.g. the following message is an indicator of this problem:
					err:(dll/win32/wininet/urlcache.c:847) no container found
			 | 
		
This should never happen since CSIDL_INTERNET_CACHE is defined as a catch-all container requiring no suffix. That means when wininet was loaded, this folder could not be determined (likely because of a missing USERPROFILE variable)
Attachments
Issue Links
- duplicates
 - 
                    
CORE-11972 %Userprofile% is missing an Environment Variable
-         
 - Resolved
 
 -         
 
- relates to
 - 
                    
CORE-10215 Community Edition: Chrome v38 should run in the Community Edition.
-         
 - Resolved
 
 -         
 - 
                    
CORE-12414 Environment block not correctly initialized for started services
-         
 - Resolved
 
 -         
 - 
                    
CORE-12250 CSIDL_PROFILE reported as empty string while expected to be supported in NT 5.2
-         
 - Resolved
 
 -