[WININET] - Missing the USERPROFILE variable is a critical bug, so inform us about it with an ERR instead of a TRACE CORE-10381

svn path=/trunk/; revision=69634